# threadist

./: .gitignore  App.tsx  QUICK_START.md  README.md  STREAMING_AUDIO_GUIDE.md  app.json  package-lock.json  package.json  project-description.md  start.sh
backend/: .gitignore  env.example  pyproject.toml  run.py  test_api.py
backend/src/threadist_backend/: __init__.py  config.py  main.py  models.py
backend/src/threadist_backend/services/: __init__.py  elevenlabs_service.py  recommendation_service.py  reddit_service.py  supabase_service.py
docs/: database.md
frontend/: App.tsx  app.json  package-lock.json  package.json
frontend/src/components/: AudioPlayer.tsx  BottomNavigation.tsx  EnhancedStoryCard.tsx  SplashScreen.tsx  StoryCard.tsx
frontend/src/screens/: CategoryScreen.tsx  ExploreScreen.tsx  HomeScreen.tsx  InterestSelectionScreen.tsx  LoginScreen.tsx  StoryDetailsScreen.tsx  WelcomeScreen.tsx  index.ts
frontend/src/services/: apiService.ts  audioService.ts  authService.ts  interestsService.ts
frontend/src/styles/: theme.ts
frontend/types/: env.d.ts
helpful-code/: elevenlabs-example.ts
src/components/: index.ts
src/lib/: supabase.ts
src/screens/: EmailConfirmationScreen.tsx  HomeScreen.tsx  InterestsScreen.tsx  LoginScreen.tsx  SignUpScreen.tsx  SubredditSelectionScreen.tsx  index.ts
src/services/: interestsService.ts
src/styles/: index.ts
